; ModuleID = '/home/carl/AnghaBench/nginx/src/stream/extr_ngx_stream_variables.c_ngx_stream_map_find.c'
source_filename = "/home/carl/AnghaBench/nginx/src/stream/extr_ngx_stream_variables.c_ngx_stream_map_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_13__ = type { i64, %struct.TYPE_14__*, i32 }
%struct.TYPE_14__ = type { i8*, i32 }
%struct.TYPE_15__ = type { i64, i32 }

@NGX_DECLINED = common dso_local global i64 0, align 8
@NGX_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_stream_map_find(%struct.TYPE_12__* %0, %struct.TYPE_13__* %1, %struct.TYPE_15__* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca %struct.TYPE_15__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %5, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %6, align 8
  store %struct.TYPE_15__* %2, %struct.TYPE_15__** %7, align 8
  %12 = load %struct.TYPE_15__*, %struct.TYPE_15__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  store i64 %14, i64* %10, align 8
  %15 = load i64, i64* %10, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %3
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i64, i64* %10, align 8
  %24 = call i32* @ngx_pnalloc(i32 %22, i64 %23)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %17
  store i8* null, i8** %4, align 8
  br label %48

28:                                               ; preds = %17
  br label %30

29:                                               ; preds = %3
  store i32* null, i32** %9, align 8
  br label %30

30:                                               ; preds = %29, %28
  %31 = load i32*, i32** %9, align 8
  %32 = load %struct.TYPE_15__*, %struct.TYPE_15__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = load i64, i64* %10, align 8
  %36 = call i64 @ngx_hash_strlow(i32* %31, i32 %34, i64 %35)
  store i64 %36, i64* %11, align 8
  %37 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %37, i32 0, i32 2
  %39 = load i64, i64* %11, align 8
  %40 = load i32*, i32** %9, align 8
  %41 = load i64, i64* %10, align 8
  %42 = call i8* @ngx_hash_find_combined(i32* %38, i64 %39, i32* %40, i64 %41)
  store i8* %42, i8** %8, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = icmp ne i8* %43, null
  br i1 %44, label %45, label %47

45:                                               ; preds = %30
  %46 = load i8*, i8** %8, align 8
  store i8* %46, i8** %4, align 8
  br label %48

47:                                               ; preds = %30
  store i8* null, i8** %4, align 8
  br label %48

48:                                               ; preds = %47, %45, %27
  %49 = load i8*, i8** %4, align 8
  ret i8* %49
}

declare dso_local i32* @ngx_pnalloc(i32, i64) #1

declare dso_local i64 @ngx_hash_strlow(i32*, i32, i64) #1

declare dso_local i8* @ngx_hash_find_combined(i32*, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
